--- a/src/assets/globals.scss
+++ b/src/assets/globals.scss
@@ -9,11 +9,6 @@
 	font-size: 1.12rem;
 }
 
-/* Font Size */
-
-$font-size-default: 1.12rem;
-$font-size-small: 0.75rem;
-
 /* Primary Colors */
 
 $color-dark-blue: hsl(233, 26%, 24%);
@@ -47,6 +42,7 @@ $font-weight-bold: 700;
 
 /* Font Sizes */
 
+$font-size-small: 0.6rem;
 $font-size-regular: 1.12rem;
 $font-size-medium: 2rem;
 $font-size-large: 2.5rem;
@@ -97,8 +93,9 @@ h2 {
 }
 
 h3 {
-	font-weight: 200;
+	font-weight: 300;
 	color: $color-dark-blue;
+	font-size: $font-size-regular;
 }
 
 p {
